tests/ui/rfcs/rfc-2632-const-trait-impl/staged-api.unstable.stderr
error[E0015]: cannot call non-const fn `<staged_api::Unstable as staged_api::MyTrait>::func` in constant functions
  --> $DIR/staged-api.rs:32:5
   |
LL |     Unstable::func();
   |     ^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const fn `<Foo as staged_api::MyTrait>::func` in constant functions
  --> $DIR/staged-api.rs:35:5
   |
LL |     Foo::func();
   |     ^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const fn `<staged_api::Unstable as staged_api::MyTrait>::func` in constant functions
  --> $DIR/staged-api.rs:44:5
   |
LL |     Unstable::func();
   |     ^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const fn `<Foo as staged_api::MyTrait>::func` in constant functions
  --> $DIR/staged-api.rs:47:5
   |
LL |     Foo::func();
   |     ^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const fn `<staged_api::Unstable as staged_api::MyTrait>::func` in constant functions
  --> $DIR/staged-api.rs:55:5
   |
LL |     Unstable::func();
   |     ^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const fn `<Foo as staged_api::MyTrait>::func` in constant functions
  --> $DIR/staged-api.rs:57:5
   |
LL |     Foo::func();
   |     ^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: `const_context_not_const_stable` is not yet stable as a const fn
  --> $DIR/staged-api.rs:59:5
   |
LL |     const_context_not_const_stable()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: const-stable functions can only call other const-stable functions

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0015`.
